<resources>
    <string name="app_name">JustFlow</string>
    <string name="recently">Recently</string>
    <string name="popular_in_area">Popular in Your Area</string>
    <string name="top_charts">Top Charts</string>
    <string name="room_name">Van Dometa</string>
    <string name="num_of_users">Kendi Bumaeee</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="play">play</string>
    <string name="title_activity_searchable">Searchable</string>
</resources>
