<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    >
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!--START-->
                <TextView
                    android:id="@+id/you_rooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/recently"
                    android:textColor="@color/textColor"
                    android:textSize="30sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/you_rooms_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
                <!--END-->

                <!--START-->
                <TextView
                    android:id="@+id/top_charts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/top_charts"
                    android:textColor="@color/textColor"
                    android:textSize="30sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/top_charts_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
                <!--END-->

                <!--START-->
                <TextView
                    android:id="@+id/popular_in_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/popular_in_area"
                    android:textColor="@color/textColor"
                    android:textSize="30sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/popular_in_area_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
                <!--START-->


            </LinearLayout>


        </ScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/customBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="32dp"
            android:src="@drawable/ic_magnifying_glass_icon"
            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/paly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/customBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="32dp"
            android:src="@drawable/ic_play_button"
            />


    </android.support.constraint.ConstraintLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="aaaaa"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="aaaaa" />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="aaaaa" />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="aaaaa" />



   </LinearLayout>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>